Close design gaps: read path, AWS stack, assumptions, retention, DR, tenancy isolation